Fixed navbar align-items: center error

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -69,38 +69,43 @@ body {
 }
 
 header {
-  background: #fff;
+  background: #fff; /*
+  display: flex;
+  align-items: center;
+  height: 60px;  Adjust as necessary */
 }
 
 header .navbar-container {
-  /*max-width: 1400px;*/
   margin: 0 auto;
   padding: 0 1em;
   display: flex;
   align-items: center;
-  gap: 2em;
-   justify-content: space-between; 
+  justify-content: space-between; 
+  height: 100%;
 }
 
-.content {
+.navbar-child {
   display: flex;
+  align-items: center; /* Ensures the items are centered vertically */
 }
 
 .navbar-content {
   color: black;
-}
-
-.navbar-left {
+  margin-left: 1em;
   display: flex;
-  justify-content: center;
+  align-items: center; /* Ensures the text within the links is centered vertically */
+  height: 100%;
 }
 
-.navbar-left a {
-  margin-left: 10px;
+nav {
+  display: flex;
+  align-items: center; /* Ensures the links are centered vertically */
+  padding: 0em 1em;
 }
 
 nav a {
-  margin-left: 10px;
+  display: flex;
+  align-items: center; /* Ensures the text within the links is centered vertically */
 }
 
 .pages {
